[package]
name = "ckb-extension-fee-estimator"
version = "0.1.0-alpha.0"
authors = ["Boyu Yang <yangby@cryptape.com>"]
edition = "2018"
license = "MIT"
description = "CKB extension to estimate transaction fees."
homepage = "https://github.com/yangby-cryptape/ckb-extension-fee-estimator"
repository = "https://github.com/yangby-cryptape/ckb-extension-fee-estimator"
readme = "README.md"
include = ["src/**/*", "LICENSE", "README.md"]

[[bin]]
name = "ckb-fee-estimator"
path = "src/bin.rs"

[dependencies]
ckb-types = "0.38.0"
ckb-jsonrpc-types = "0.38.0"
ckb-fee-estimator = "0.38.0"
faketime = "0.2.0"
anyhow = "1.0.34"
thiserror = "1.0.22"
log = "0.4.11"
env_logger = "0.8.2"
clap = "2.33.3"
serde = "1.0.117"
serde_json = "1.0.59"
parking_lot = "0.11.1"
futures = { version = "0.3.8", features = ["compat"] }
tokio = { version = "0.2.23", features = ["full"] }
jsonrpc-http-server = "15.1.0"
jsonrpc-server-utils = "15.1.0"
jsonrpc-core-client = "15.1.0"
jsonrpc-derive = "15.1.0"
jsonrpc-core = "15.1.0"
jsonrpc-pubsub = "15.1.0"
time = "0.2.23"
statrs = "0.13.0"

[badges]
maintenance = { status = "experimental" }
