[package]
name = "ckb-extension-fee-estimator"
version = "0.1.0"
authors = ["Boyu Yang <yangby@cryptape.com>"]
edition = "2018"
license = "MIT"
description = "CKB extension to estimate transaction fees."
homepage = "https://github.com/yangby-cryptape/ckb-extension-fee-estimator"
repository = "https://github.com/yangby-cryptape/ckb-extension-fee-estimator"
readme = "README.md"
include = ["src/**/*", "LICENSE", "README.md"]

[[bin]]
name = "ckb-fee-estimator"
path = "src/bin.rs"

[dependencies]
ckb-types = "0.104.1"
ckb-jsonrpc-types = "0.104.1"
faketime = "0.2.1"
anyhow = "1.0.65"
thiserror = "1.0.37"
log = "0.4.17"
env_logger = "0.9.1"
clap = { version = "4.0.17", features = ["derive"] }
serde = "1.0.145"
serde_json = "1.0.86"
parking_lot = "0.12.1"
futures = "0.3.24"
tokio = { version = "1.21.2", features = ["full"] }
ctrlc = "3.2.3"
jsonrpc-http-server = "18.0.0"
jsonrpc-server-utils = "18.0.0"
jsonrpc-core-client = "18.0.0"
jsonrpc-derive = "18.0.0"
jsonrpc-core = "18.0.0"
jsonrpc-pubsub = "18.0.0"
time = { version = "0.3.15", features = ["macros", "formatting"] }
statrs = "0.16.0"

[badges]
maintenance = { status = "experimental" }
